tests/ui/consts/too_generic_eval_ice.next.stderr
error[E0284]: type annotations needed: cannot satisfy `the constant `Self::HOST_SIZE` can be evaluated`
  --> $DIR/too_generic_eval_ice.rs:11:13
   |
LL |         [5; Self::HOST_SIZE] == [6; 0]
   |             ^^^^^^^^^^^^^^^ cannot satisfy `the constant `Self::HOST_SIZE` can be evaluated`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
